2007-07-02  Bastien Nocera  <hadess@hadess.net>

	* autogen.sh: remove libegg mentions in there as well

	* configure.in: up the gnokii requirements

	* libgsm/glibgsmtest.c: (main): silly identation changes,
	call g_thread_init() to avoid warnings with newer glibs

	* libgsm/gnokii-identify.c: (main):
	* libgsm/phonemgr-utils.c: (phonemgr_utils_guess_driver),
	(phonemgr_utils_tell_driver):
	* libgsm/phonemgr-utils.h: Move tell_driver() to phonemgr-utils,
	so we can add the feature in g-p-m itself, use gn_lib_get_phone_model
	instead of GN_OP_Identify, kill warning with newer glib, as above

2007-07-02  Bastien Nocera  <hadess@hadess.net>

	* src/ui.c: (boldify_label), (bigger_label), (get_ui):
	* ui/phonemgr.glade:
	Remove markup from the glade file (Closes: #151431)

2007-07-02  Bastien Nocera  <hadess@hadess.net>

	* libegg/*: remove outdated copy of libegg

	* Makefile.am:
	* configure.in:
	* src/Makefile.am:
	* src/app.h:
	* src/icon.c: (tray_icon_activate_cb), (tray_icon_popup_menu_cb),
	(load_icon), (flash_icon), (enable_flasher), (set_icon_state),
	(program_icon), (tray_icon_init), (tray_icon_hide):
	* src/main.c: (main):
	* src/ui.c: (ui_init): Use GtkStatusIcon instead of the EggTrayIcon
	(Closes: #349259)

2007-07-02  Bastien Nocera  <hadess@hadess.net>

	* src/e-contact-entry.c: Update from contact-lookup-applet trunk

2007-07-02  Bastien Nocera  <hadess@hadess.net>

	* configure.in: No need to check open-obex, we don't use it here
	(Closes: #441032)

2007-01-23  David Lodge <dave@cirt.net>

	* configure.in: Added en_GB to ALL_LINGUAS

2006-12-14  Pema Geyleg  <pgeyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS

2006-11-01  Dan Winship  <danw@novell.com>

	* configure.in: Run configure checks under gcc, not g++ (#368920)

2006-10-19  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* configure.in: Added "ca" (Catalan) to ALL_LINGUAS.

============ Version 0.8

2006-09-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd